# onefuzz

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CURRENT_VERSION  PR-TEST.txt  README.md  SECURITY.md  codecov.yaml  codecov.yml  global.json  instance-list.txt  instance-view.txt  task.ps1  tmp.txt  todo.txt
docs/: FAQ.md  (+30 more)
src/agent/: .gitignore  .rustfmt.toml  Cargo.toml  workset_context.json
src/agent/.cargo/: config  config.toml
src/agent/LibFuzzerDotnetLoader/: LibFuzzerDotnetLoader.csproj  Program.cs  README.md
src/agent/atexit/: Cargo.toml
src/agent/atexit/src/: lib.rs
src/agent/cobertura/: Cargo.toml
src/agent/cobertura/src/: lib.rs
src/agent/coverage/: Cargo.toml  README.md
src/agent/coverage-legacy/: Cargo.toml
src/agent/coverage-legacy/examples/: coverage.rs  elf_sancov_tables.rs  pdb_sancov_tables.rs  src-cov.rs
src/agent/coverage-legacy/src/: block.rs  cache.rs  cobertura.rs  debuginfo.rs  demangle.rs  disasm.rs  intel.rs  pdb.rs  pe.rs  region.rs  report.rs  sancov.rs  source.rs
src/agent/coverage-legacy/src/block/: pe_provider.rs  windows.rs
src/agent/coverage/examples/: allowlist-check.rs  block_coverage.rs  cobertura.rs  coverage.rs  elf_sancov_tables.rs  pdb_sancov_tables.rs  record.rs  src-cov.rs
src/agent/coverage/fuzz/: Cargo.toml
src/agent/coverage/fuzz/fuzz_targets/: fuzz_target_allowlist_parse.rs  fuzz_target_record_coverage.rs
src/agent/coverage/src/: allowlist.rs  binary.rs  block.rs  cache.rs  cobertura.rs  cobertura_test.xml  code.rs  debuginfo.rs  demangle.rs  disasm.rs  elf.rs  filter.rs  intel.rs  lib.rs  pdb.rs  pe.rs  record.rs  region.rs  report.rs  sancov.rs  source.rs  test.rs  timer.rs
src/agent/coverage/src/allowlist/: tests.rs
src/agent/coverage/tests/: snapshot.rs
src/agent/debuggable-module/: Cargo.toml
src/agent/debuggable-module/examples/: dump.rs
src/agent/debuggable-module/src/: block.rs  debuginfo.rs  lib.rs  linux.rs  load_module.rs  loader.rs  path.rs  windows.rs
src/agent/debugger/: Cargo.toml
src/agent/debugger/src/: breakpoint.rs  dbghelp.rs  debug_event.rs  debugger.rs  lib.rs  module.rs  stack.rs  target.rs
src/agent/dynamic-library/: Cargo.toml
src/agent/dynamic-library/src/: lib.rs  linux.rs  windows.rs
src/agent/input-tester/: Cargo.toml
src/agent/input-tester/src/: appverifier.rs  crash_detector.rs  lib.rs  logging.rs  summary.rs  tester.rs
src/agent/libclusterfuzz/: Cargo.toml  README.md  cgmanifest.json
src/agent/libclusterfuzz/src/: generated.rs  lib.rs
src/agent/onefuzz/: Cargo.toml
src/agent/onefuzz-agent/: Cargo.toml  build.rs
src/agent/onefuzz-agent/data/: afl-fuzzer_stats.txt  fake-crash-report.json
src/agent/onefuzz-agent/src/: Validation.rs  agent.rs  commands.rs  config.rs  coordinator.rs  debug.rs  done.rs  failure.rs  heartbeat.rs  log_uploader.rs  main.rs  panic.rs  reboot.rs  scheduler.rs  setup.rs  validation.rs  validation2.rs  validations.rs  work.rs  worker.rs
src/agent/onefuzz-downloader/: .gitignore  Cargo.toml
src/agent/onefuzz-downloader/src/: config.rs  main.rs  setup.rs
src/agent/onefuzz-file-format/: Cargo.toml
src/agent/onefuzz-file-format/examples/: cobertura.rs
src/agent/onefuzz-file-format/src/: coverage.rs  hex.rs  lib.rs
src/agent/onefuzz-file-format/test-data/: fuzz.c  fuzz.h
src/agent/onefuzz-file-format/test-script/: generate-report.ps1  generate-report.sh
src/agent/onefuzz-file-format/tests/: binary.rs  integration.rs  source.rs
src/agent/onefuzz-result/: Cargo.toml
src/agent/onefuzz-result/src/: job_result.rs  lib.rs
src/agent/onefuzz-supervisor/: Cargo.toml  build.rs
src/agent/onefuzz-supervisor/src/: agent.rs  auth.rs  buffer.rs  commands.rs  config.rs  coordinator.rs  debug.rs  done.rs  failure.rs  heartbeat.rs  logpanic.rs  main.rs  monitor.rs  panic.rs  process.rs  reboot.rs  scheduler.rs  setup.rs  work.rs  worker.rs
src/agent/onefuzz-task/: Cargo.toml  build.rs
src/agent/onefuzz-task/data/: fake-crash-report-old.json  fake-crash-report.json
src/agent/onefuzz-task/src/: check_for_update.rs  config_test_utils.rs  lib.rs  main.rs  test_utils.rs
src/agent/onefuzz-task/tests/: template_integration.rs
src/agent/onefuzz-telemetry/: Cargo.toml
src/agent/onefuzz-telemetry/src/: lib.rs
src/agent/onefuzz/data/: asan-check-failure-missing-symbolizer.txt  tsan-linux-llvm10-data-race.txt
src/agent/onefuzz/examples/: dir-monitor.rs  memory.rs  test-input.rs
src/agent/onefuzz/src/: asan.rs  auth.rs  az_copy.rs  blob.rs  cmd.rs  env.rs  expand.rs  fs.rs  heartbeat.rs  http.rs  input_tester.rs  ipc.rs  jitter.rs  job_result.rs  lib.rs  libfuzzer.rs  machine_id.rs  memory.rs  monitor.rs  process.rs  sanitizer.rs  sha256.rs  syncdir.rs  system.rs  telemetry.rs  triage.rs  uploader.rs  utils.rs
src/agent/reqwest-retry/: Cargo.toml
src/agent/reqwest-retry/src/: lib.rs
src/agent/srcview/: .gitignore  Cargo.toml  README.md  TODO.md
src/agent/srcview/examples/: dump_cobertura.rs  dump_modoff.rs  dump_paths.rs  dump_srcloc.rs
src/agent/srcview/res/: example.txt
src/agent/srcview/src/: lib.rs  modoff.rs  pdbcache.rs  report.rs  srcline.rs  srcview.rs
src/agent/srcview/tests/: modoff.rs  srcview.rs
src/agent/stacktrace-parser/: Cargo.toml
src/agent/stacktrace-parser/data/: libfuzzer-windows-llvm10-out-of-memory-rss.txt
src/agent/stacktrace-parser/src/: asan.rs  dotnet.rs  lib.rs
src/agent/storage-queue/: Cargo.toml
src/agent/storage-queue/src/: azure_queue.rs  lib.rs  local_queue.rs  message.rs
src/agent/timer/: Cargo.toml
src/agent/timer/src/: lib.rs
src/agent/utils/: Cargo.toml
src/agent/utils/src/: lib.rs
src/agent/win-util/: Cargo.toml
src/agent/win-util/src/: aedebug.rs  com.rs  file.rs  handle.rs  hr.rs  jobs.rs  lib.rs  macros.rs  memory.rs  pipe_handle.rs  process.rs  string.rs  wer.rs
src/agent/windows-error-reporting/: Cargo.toml
src/agent/windows-error-reporting/examples/: submit_report.rs
src/agent/windows-error-reporting/src/: lib.rs  wer.rs
src/proxy-manager/: Cargo.toml  build.rs
src/proxy-manager/src/: config.rs  main.rs  proxy.rs
(+1408 files in other folders)
