[workspace]
members = [
    "atexit",
    "cobertura",
    "coverage",
    "debuggable-module",
    "debugger",
    "dynamic-library",
    "input-tester",
    "onefuzz",
    "onefuzz-task",
    "onefuzz-agent",
    "onefuzz-file-format",
    "onefuzz-telemetry",
    "reqwest-retry",
    "srcview",
    "storage-queue",
    "win-util",
    "libclusterfuzz",
    "stacktrace-parser",
]

[profile.release]
lto = "thin"
debug = true