[workspace]
members = [
    "atexit",
    "cobertura",
    "coverage",
    "debuggable-module",
    "debugger",
    "dynamic-library",
    "input-tester",
    "onefuzz",
    "onefuzz-task",
    "onefuzz-agent",
    "onefuzz-file-format",
    "onefuzz-telemetry",
    "reqwest-retry",
    "storage-queue",
    "win-util",
    "libclusterfuzz",
    "stacktrace-parser",
]

resolver = "2"

[profile.release]
lto = "thin"
# Per https://fasterthanli.me/articles/why-is-my-rust-build-so-slow:
# In Cargo.toml, debug = true actually means debug = 2, and it's usually overkill,
# unless you're doing the sort of debugging where you need to be able to inspect
#  the value of local variables for example.
# If all you're after is a stack trace, debug = 1 is good enough.
debug = 1
