[package]
name = "onefuzz-proxy-manager"
version = "0.0.1"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
publish = false
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = "2.34"
env_logger = "0.9"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage-queue = { path = "../agent/storage-queue" }
thiserror = "1.0"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread", "fs", "process"] }
url = { version = "2.2", features = ["serde"] }
reqwest-retry = { path = "../agent/reqwest-retry"}
onefuzz-telemetry = { path = "../agent/onefuzz-telemetry" }
uuid = "0.8"
log = "0.4"
