[package]
name = "onefuzz-proxy-manager"
version = "0.0.1"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
publish = false
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["cargo", "string"] }
env_logger = "0.10"
futures = "0.3"
reqwest = { version = "0.11", features = [
    "json",
    "stream",
    "native-tls-vendored",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage-queue = { path = "../agent/storage-queue" }
thiserror = "1.0"
tokio = { version = "1.28", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "process",
] }
url = { version = "2.4", features = ["serde"] }
reqwest-retry = { path = "../agent/reqwest-retry" }
onefuzz-telemetry = { path = "../agent/onefuzz-telemetry" }
uuid = { version = "1.3", features = ["serde"] }
log = "0.4"
tempfile = "3.6.0"
