[package]
name = "coverage"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
cobertura = { path = "../cobertura" }
debuggable-module = { path = "../debuggable-module" }
iced-x86 = "1.18"
log = "0.4.17"
regex = "1.7"
symbolic = { version = "10.1", features = [
    "debuginfo",
    "demangle",
    "symcache",
] }
thiserror = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
debugger = { path = "../debugger" }

[target.'cfg(target_os = "linux")'.dependencies]
pete = "0.9"
# For procfs, opt out of the `chrono` freature; it pulls in an old version
# of `time`. We do not use the methods that the `chrono` feature enables.
procfs = { version = "0.12", default-features = false, features = ["flate2"] }

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10.0"
pretty_assertions = "1.3.0"
