[package]
name = "coverage"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
slow-tests = []

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
cobertura = { path = "../cobertura" }
debuggable-module = { path = "../debuggable-module" }
iced-x86 = "1.20"
log = "0.4.17"
regex = "1.9"
symbolic = { version = "12.3", features = [
    "debuginfo",
    "demangle",
    "symcache",
] }
thiserror = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
debugger = { path = "../debugger" }

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.26"
pete = "0.10"
# For procfs, opt out of the `chrono` freature; it pulls in an old version
# of `time`. We do not use the methods that the `chrono` feature enables.
procfs = { version = "0.15.1", default-features = false, features = ["flate2"] }

[dev-dependencies]
cc = "1.0"
clap = { version = "4.3", features = ["derive"] }
dunce = "1.0"
env_logger = "0.10.0"
pretty_assertions = "1.4.0"
insta = { version = "1.31.0", features = ["glob"] }
itertools = "0.11.0"
coverage = { path = "../coverage" }
tempfile = "3.7.0"