[package]
name = "coverage"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
slow-tests = []

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
cobertura = { path = "../cobertura" }
debuggable-module = { path = "../debuggable-module" }
iced-x86 = "1.20"
log = "0.4.17"
regex = "1.9"
symbolic = { version = "12.3", features = [
    "debuginfo",
    "demangle",
    "symcache",
] }
thiserror = "1.0"
process_control = "4.0"

[target.'cfg(target_os = "windows")'.dependencies]
debugger = { path = "../debugger" }

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.26"
pete = "0.12"
# For procfs, opt out of the `chrono` freature; it pulls in an old version
# of `time`. We do not use the methods that the `chrono` feature enables.
procfs = { version = "0.15.1", default-features = false, features = ["flate2"] }

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10.0"
pretty_assertions = "1.4.0"
insta = { version = "1.32.0", features = ["glob"] }
coverage = { path = "../coverage" }
cc = "1.0"
tempfile = "3.8.0"
dunce = "1.0"
