[package]
name = "debuggable-module"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
elsa = "1.8.0"
gimli = "0.26.2"
goblin = "0.6.0"
iced-x86 = "1.17"
log = "0.4.17"
pdb = "0.8.0"
regex = "1.7"
symbolic = { version = "10.1", features = ["debuginfo", "demangle", "symcache"] }
thiserror = "1.0"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
