[package]
name = "debuggable-module"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
elsa = "1.9.0"
gimli = "0.28.0"
goblin = "0.6"
iced-x86 = "1.20"
log = "0.4.17"
pdb = "0.8.0"
regex = "1.9"
symbolic = { version = "12.3", features = [
    "debuginfo",
    "demangle",
    "symcache",
] }
thiserror = "1.0"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
