[package]
name = "debugger"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
fnv = "1.0"
goblin = "0.5"
iced-x86 = "1.15"
log = "0.4"
memmap2 = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
win-util = { path = "../win-util" }

[dependencies.winapi]
version = "0.3"
features = [
    "dbghelp",
    "debugapi",
    "handleapi",
    "memoryapi",
    "processthreadsapi",
    "securitybaseapi",
    "shellapi",
    "werapi",
    "winbase",
    "winerror"
]
