[package]
name = "dynamic-library"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.6", features = ["derive"] }
lazy_static = "1.4"
regex = "1.7"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
debugger = { path = "../debugger" }
winreg = "0.11"

[dependencies.winapi]
version = "0.3"
features = [
    "dbghelp",
    "debugapi",
    "handleapi",
    "memoryapi",
    "processthreadsapi",
    "securitybaseapi",
    "shellapi",
    "werapi",
    "winbase",
    "winerror",
]

[[bin]]
name = "dynamic-library"
