[package]
name = "input-tester"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
atexit = { path = "../atexit" }
debugger = { path = "../debugger" }
fnv = "1.0"
hex = "0.4"
log = "0.4"
num_cpus = "1.15"
rayon = "1.8"
sha2 = "0.10.2"
win-util = { path = "../win-util" }

[dependencies.windows]
version = "0.48"
features = [
    "Win32_System_SystemServices"
]
