[package]
name = "onefuzz-agent"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
publish = false


[dependencies]
anyhow = "1.0.51"
async-trait = "0.1"
downcast-rs = "1.2"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
onefuzz = { path = "../onefuzz" }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage-queue = { path = "../storage-queue" }
tokio = { version = "1.16", features = ["full"] }
url = { version = "2.2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
clap = { version = "3.2.4", features = ["derive", "cargo"] }
reqwest-retry = { path = "../reqwest-retry" }
onefuzz-telemetry = { path = "../onefuzz-telemetry" }
backtrace = "0.3"

[target.'cfg(target_family = "unix")'.dependencies]
users = "0.11"
nix = "0.23"

[target.'cfg(target_family = "windows")'.dependencies]
winapi = "0.3"
