[package]
name = "onefuzz-agent"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
publish = false
license = "MIT"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
downcast-rs = "1.2"
env_logger = "0.10"
futures = "0.3"
log = "0.4"
onefuzz = { path = "../onefuzz" }
reqwest = { version = "0.11", features = [
    "json",
    "stream",
    "native-tls-vendored",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage-queue = { path = "../storage-queue" }
tokio = { version = "1.28", features = ["full"] }
url = { version = "2.4", features = ["serde"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
clap = { version = "4", features = ["derive", "cargo"] }
reqwest-retry = { path = "../reqwest-retry" }
onefuzz-telemetry = { path = "../onefuzz-telemetry" }
backtrace = "0.3"
ipc-channel = { git = "https://github.com/servo/ipc-channel", rev = "7f432aa" }
dynamic-library = { path = "../dynamic-library" }
azure_core = { version = "0.12", default-features = false, features = [
    "enable_reqwest",
] }
azure_storage = { version = "0.12", default-features = false, features = [
    "enable_reqwest",
] }
azure_storage_blobs = { version = "0.12", default-features = false, features = [
    "enable_reqwest",
] }


[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.26"

[target.'cfg(target_family = "windows")'.dependencies]
winapi = "0.3"
