[package]
name = "onefuzz-downloader"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
publish = false


[dependencies]
anyhow = "1.0.31"
appinsights = "0.1"
async-trait = "0.1.36"
downcast-rs = "1.2.0"
env_logger = "0.7"
futures = "0.3.5"
log = "0.4"
onefuzz = { path = "../onefuzz" }
reqwest = { version = "0.10", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage-queue = { path = "../storage-queue" }
structopt = "0.3"
tokio = { version = "0.2.13", features = ["full"] }
url = { version = "2.1.1", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
clap = "2.33"
