[package]
name = "onefuzz-file-format"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
coverage = { path = "../coverage" }
debuggable-module = { path = "../debuggable-module" }
quick-xml = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
pretty_assertions = "1.4"
