[package]
name = "onefuzz-result"
version = "0.2.0"
authors = ["fuzzing@microsoft.com"]
edition = "2021"
publish = false
license = "MIT"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
reqwest = "0.11"
serde = "1.0"
storage-queue = { path = "../storage-queue" }
tokio = { version = "1.29", features = ["full"] }
uuid = { version = "1.4", features = ["serde", "v4"] }

