[package]
name = "onefuzz-supervisor"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
publish = false


[dependencies]
anyhow = "1.0.38"
appinsights = "0.1"
async-trait = "0.1"
downcast-rs = "1.2"
env_logger = "0.8"
futures = "0.3.14"
log = "0.4"
onefuzz = { path = "../onefuzz" }
reqwest = { version = "0.11.3", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage-queue = { path = "../storage-queue" }
structopt = "0.3"
tokio = { version = "1.5.0", features = ["full"] }
url = { version = "2.2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
clap = "2.33"
reqwest-retry = { path = "../reqwest-retry" }
onefuzz-telemetry = { path = "../onefuzz-telemetry" }

[target.'cfg(target_os = "linux")'.dependencies]
users = "0.11"
