[package]
name = "onefuzz-supervisor"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
publish = false


[dependencies]
anyhow = "1.0.43"
async-trait = "0.1"
downcast-rs = "1.2"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
onefuzz = { path = "../onefuzz" }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage-queue = { path = "../storage-queue" }
structopt = "0.3"
tokio = { version = "1.11", features = ["full"] }
url = { version = "2.2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
clap = "2.33"
reqwest-retry = { path = "../reqwest-retry" }
onefuzz-telemetry = { path = "../onefuzz-telemetry" }
backtrace = "0.3"
# command-group has an issue handling timeouts to GetQueuedCompletionStatus.
# This rev is pinned to a hash of a PR that addresses this issue.  Once the PR,
# or something like it, has been merged, update this to use a released version.
# Ref: https://github.com/watchexec/command-group/pull/3
command-group = { git = "https://github.com/bmc-msft/command-group", rev = "0a5a194a4688f91448b52a771dc2e91e82db2d49" }

[target.'cfg(target_family = "unix")'.dependencies]
users = "0.11"
