[package]
name = "onefuzz-task"
version = "0.2.0"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
publish = false
license = "MIT"

[features]
integration_test = []

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
arraydeque = "0.5"
async-trait = "0.1"
atexit = { path = "../atexit" }
backoff = { version = "0.4", features = ["tokio"] }
clap = { version = "4", features = ["cargo", "string"] }
cobertura = { path = "../cobertura" }
coverage = { path = "../coverage" }
crossterm = "0.26"
env_logger = "0.10"
flume = "0.10"
futures = "0.3"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.15"
onefuzz-file-format = { path = "../onefuzz-file-format" }
regex = "1.7.1"
reqwest = { version = "0.11", features = [
    "json",
    "stream",
    "native-tls-vendored",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.6"
onefuzz = { path = "../onefuzz" }
onefuzz-telemetry = { path = "../onefuzz-telemetry" }
path-absolutize = "3.0"
reqwest-retry = { path = "../reqwest-retry" }
strum = "0.24"
strum_macros = "0.24"
stacktrace-parser = { path = "../stacktrace-parser" }
storage-queue = { path = "../storage-queue" }
tempfile = "3.2"
thiserror = "1.0"
tokio = { version = "1.24", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
tui = { version = "0.19", default-features = false, features = ['crossterm'] }
url = { version = "2.3", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }

azure_core = { version = "0.10", default-features = false, features = [
    "enable_reqwest",
] }
azure_storage = { version = "0.10", default-features = false, features = [
    "enable_reqwest",
] }
azure_storage_blobs = { version = "0.10", default-features = false, features = [
    "enable_reqwest",
] }

[dev-dependencies]
pretty_assertions = "1.3"
