[package]
name = "onefuzz-telemetry"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
license = "MIT"

[features]
default = []
z3 = ["z3-sys"]
intel_instructions = ["iced-x86"]

[dependencies]
appinsights = { version = "0.2.1", features = ["rustls"], default-features = false }
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
z3-sys = { version = "0.6", optional = true}
iced-x86 = { version = "1.17", optional = true}
tokio = { version = "1.16", features = ["full"] }
lazy_static = "1.4"
chrono = "0.4"
