[package]
name = "onefuzz-telemetry"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
appinsights = { version = "0.2.3" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.24", features = ["full"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
