[package]
name = "onefuzz"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
publish = false
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
bytes = "1.1"
dunce = "1.0"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
notify = "4.0"
regex = "1.4"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features=false }
sha2 = "0.10.1"
url = { version = "2.2", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
rand = "0.8"
serde_derive = "1.0"
tokio = { version = "1.15", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs", "time", "tokio-util"] }
tokio-util = { version = "0.6", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
urlparse = "0.7"
ring = "0.16"
storage-queue = { path = "../storage-queue" }
strum = "0.23"
strum_macros = "0.23"
tempfile = "3.2"
process_control = "3.0"
reqwest-retry = { path = "../reqwest-retry"}
onefuzz-telemetry = { path = "../onefuzz-telemetry"}
stacktrace-parser = { path = "../stacktrace-parser" }
backoff = { version = "0.3", features = ["tokio"] }

[target.'cfg(target_family = "windows")'.dependencies]
winreg = "0.10"
input-tester = { path = "../input-tester" }
debugger = { path = "../debugger" }

[target.'cfg(target_family = "unix")'.dependencies]
cpp_demangle = "0.3"
nix = "0.23"

[target.'cfg(target_os = "linux")'.dependencies]
pete = "0.8"
rstack = "0.3"
proc-maps = "0.2"
