[package]
name = "onefuzz"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
publish = false
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
bytes = "1.4"
dunce = "1.0"
dynamic-library = { path = "../dynamic-library" }
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
notify = "5.1.0"
regex = "1.8.1"
reqwest = { version = "0.11", features = [
    "json",
    "stream",
    "native-tls-vendored",
], default-features = false }
sha2 = "0.10.2"
url = { version = "2.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
rand = "0.8"
serde_derive = "1.0"
tokio = { version = "1.28", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs", "time", "tokio-util"] }
tokio-util = { version = "0.7", features = ["full"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
urlparse = "0.7"
url-escape = "0.1.0"
storage-queue = { path = "../storage-queue" }
strum = "0.25"
strum_macros = "0.24"
tempfile = "3.6.0"
process_control = "4.0"
reqwest-retry = { path = "../reqwest-retry" }
onefuzz-telemetry = { path = "../onefuzz-telemetry" }
stacktrace-parser = { path = "../stacktrace-parser" }
backoff = { version = "0.4", features = ["tokio"] }

[target.'cfg(target_family = "windows")'.dependencies]
winreg = "0.50"
input-tester = { path = "../input-tester" }
debugger = { path = "../debugger" }
winapi = { version = "0.3", features = ["impl-default", "psapi"] }

[target.'cfg(target_family = "unix")'.dependencies]
cpp_demangle = "0.4"
nix = "0.26"

[target.'cfg(target_os = "linux")'.dependencies]
pete = "0.10"
rstack = "0.3"
proc-maps = { version = "0.3", default-features = false }

[dev-dependencies]
clap = { version = "4.3.0", features = ["derive"] }
pretty_assertions = "1.3.0"
