[package]
name = "reqwest-retry"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11.3", features = ["json", "stream"] }
backoff = { version = "0.3", features = ["async-std"] }
log = "0.4"
onefuzz-telemetry = { path = "../onefuzz-telemetry" }

[dev-dependencies]
tokio = { version = "1.5.0", features = ["macros"] }
