[package]
name = "reqwest-retry"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backoff = { version = "0.3", features = ["tokio"] }
log = "0.4"
onefuzz-telemetry = { path = "../onefuzz-telemetry" }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features=false }

[dev-dependencies]
tokio = { version = "1.11", features = ["macros"] }
wiremock = "0.5"
