[package]
name = "stacktrace-parser"
version = "0.1.0"
authors = ["<fuzzing@microsoft.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
hex = "0.4"
regex = "1.4"
sha2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libclusterfuzz = { path = "../libclusterfuzz" }

[dev-dependencies]
pretty_assertions = "1.0"
