[package]
name = "stacktrace-parser"
version = "0.1.0"
authors = ["<fuzzing@microsoft.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
const_format = "0.2.31"
hex = "0.4"
regex = "1.9.1"
sha2 = "0.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libclusterfuzz = { path = "../libclusterfuzz" }

[dev-dependencies]
insta = { version = "1.31.0", features = ["glob", "json"] }
pretty_assertions = "1.4"
