[package]
name = "storage-queue"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backoff = { version = "0.3", features = ["async-std"] }
base64 = "0.13"
bytes = "0.5"
derivative = "2.2.0"
flume = "0.10.4"
num_cpus = "1.13"
regex = "1.4"
reqwest = { version = "0.11.3", features = ["json", "stream"] }
reqwest-retry = { path = "../reqwest-retry" }
serde = { version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.4"
tokio = { version = "1.5.0" , features=["full"] }
queue-file = "1.1"
uuid = { version = "0.8", features = ["serde", "v4"] }