[package]
name = "storage-queue"
version = "0.1.0"
authors = ["fuzzing@microsoft.com"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.21"
bytes = { version = "1.5", features = ["serde"] }
derivative = "2.2"
flume = "0.10"
num_cpus = "1.15"
quick-xml = { version = "0.30", features = ["serialize", "serde-types"] }
regex = "1.9.1"
reqwest = { version = "0.11", features = [
    "json",
    "stream",
    "native-tls-vendored",
], default-features = false }
reqwest-retry = { path = "../reqwest-retry" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.32", features = ["full"] }
queue-file = "1.4"
uuid = { version = "1.4", features = ["serde", "v4"] }
